Add JDK 17 to the testing matrix. Remove illegal.access.option as that is no longer relevant. Add JDK 17 opts to other Weld modules.