@@ -162,7 +162,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- http://bugs.java.com/bugdatabase/view_bug.do?bug_id=4425695 -->
-                    <argLine>-Xmx768m -Dsun.zip.disableMemoryMapping=true ${surefire.plugin.jdk9.args}</argLine>
+                    <argLine>-Xmx768m -Dsun.zip.disableMemoryMapping=true</argLine>
                     <forkMode>once</forkMode>
                     <properties>
                         <property>
@@ -419,17 +419,6 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <excludedGroups>${excluded.groups}</excludedGroups>
-                            <argLine>
-                                --add-exports=java.desktop/sun.awt=ALL-UNNAMED
-                                --add-opens=java.base/java.io=ALL-UNNAMED
-                                --add-opens=java.base/java.lang=ALL-UNNAMED
-                                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                                --add-opens=java.base/java.security=ALL-UNNAMED
-                                --add-opens=java.base/java.util=ALL-UNNAMED
-                                --add-opens=java.management/javax.management=ALL-UNNAMED
-                                --add-opens=java.naming/javax.naming=ALL-UNNAMED
-                            </argLine>
-
                             <systemPropertyVariables>
                                 <!-- Silencing the broken code in getActiveConfiguration(),
                                     see https://github.com/arquillian/arquillian/blob/master/impl-base/src/main/java/org/jboss/arquillian/impl/client/container/ContainerRegistryCreator.java -->
@@ -443,17 +432,8 @@
                                 <jacoco.agent>${jacoco.agent}</jacoco.agent>
                                 <!-- This property propagates to the javaVmArguments in arquillian.xml -->
                                 <additional.vm.args>
-                                    --add-exports=java.desktop/sun.awt=ALL-UNNAMED
-                                    --add-opens=java.base/java.io=ALL-UNNAMED
-                                    --add-opens=java.base/java.lang=ALL-UNNAMED
-                                    --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                                    --add-opens=java.base/java.security=ALL-UNNAMED
-                                    --add-opens=java.base/java.util=ALL-UNNAMED
-                                    --add-opens=java.management/javax.management=ALL-UNNAMED
-                                    --add-opens=java.naming/javax.naming=ALL-UNNAMED
+                                    ${surefire.plugin.jdk17.args}
                                 </additional.vm.args>
-
-                                <illegal.access.option>${surefire.plugin.jdk9.args}</illegal.access.option>
                             </systemProperties>
                         </configuration>
                     </plugin>
@@ -523,7 +503,6 @@
                             <systemPropertyVariables>
                                 <arquillian.launch>weld-se</arquillian.launch>
                                 <libPath>${project.build.outputDirectory}</libPath>
-                                <surefire.plugin.jdk9.args>${surefire.plugin.jdk9.args}</surefire.plugin.jdk9.args>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
